Fix some alignment issue

--- a/react-frontend/src/css/nav.css
+++ b/react-frontend/src/css/nav.css
@@ -2,6 +2,7 @@
  the nav.js styled component file */
   .centerBanner {
     margin: auto;
+    margin-left: 0;
     width: 1115px;
   }
   
